--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "Ahuan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.3",
+    "aos": "^2.3.4",
     "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "jquery": "^3.6.4",
+    "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
+    "vue-persian-datetime-picker": "^2.10.4",
     "vue-router": "^3.5.1",
+    "vue-slick": "^1.2.0",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
@@ -42,7 +49,12 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
+  },
+  "rules": {
+    "no-unused-vars": "off"
   },
   "browserslist": [
     "> 1%",
