--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "jquery": "^3.6.4",
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
+    "vue-meta": "^2.4.0",
     "vue-persian-datetime-picker": "^2.10.4",
     "vue-router": "^3.5.1",
     "vue-slick": "^1.2.0",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
