--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
     "jquery": "^3.6.4",
     "vue": "^2.7.14",
     "vue-axios": "^3.5.2",
