--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-axios": "^3.5.2",
     "vue-meta": "^2.4.0",
     "vue-persian-datetime-picker": "^2.10.4",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.5.1",
     "vue-slick": "^1.2.0",
     "vuetify": "^2.6.0",
